--- a/lap1/test/index.html
+++ b/lap1/test/index.html
@@ -7,16 +7,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <h1>YO!</h1>
-    <p>This is only a test! </p>
-    <p>Below are some nice pics from teh amazing web site <a href="https://www.pexels.com/">Pexels</a> </p>
-    <img src="https://images.pexels.com/photos/4830815/pexels-photo-4830815.jpeg" alt="img1">
-    <img src="https://images.pexels.com/photos/6494668/pexels-photo-6494668.jpeg" alt="img2">
-    <img src="https://images.pexels.com/photos/12527034/pexels-photo-12527034.jpeg" alt="img3">
-    <img src="https://images.pexels.com/photos/11350811/pexels-photo-11350811.jpeg" alt="img4">
+    <header>
+        <h1>YO!</h1>
+        <p>This is only a test! This is only a test! This is only a test! </p>
+        <p>Below are some nice pics from the amazing web site <a href="https://www.pexels.com/">Pexels</a> </p>
+    </header>
+
+    <main>
+        <div class="card">
+            <img src="https://images.pexels.com/photos/4830815/pexels-photo-4830815.jpeg" alt="img1">
+            <p>text1</p>
+        </div>
+        <div class="card">
+            <img src="https://images.pexels.com/photos/6494668/pexels-photo-6494668.jpeg" alt="img2">
+            <p>text2</p>
+        </div>
+        <div class="card">
+            <img src="https://images.pexels.com/photos/12527034/pexels-photo-12527034.jpeg" alt="img3">
+            <p>text3</p>
+        </div>
+        <div class="card">
+            <img src="https://images.pexels.com/photos/11350811/pexels-photo-11350811.jpeg" alt="img4">
+            <p>text4</p>
+        </div>
+    </main>
 
 </body>
 
