--- a/lap1/test/index.html
+++ b/lap1/test/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Just a test - Home</title>
+
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -20,6 +20,14 @@
         <p>This is only a test! This is only a test! This is only a test! </p>
         <p>Below are some nice pics from the amazing web site <a href="https://www.pexels.com/">Pexels</a> </p>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="about.html">about</a></li>
+            <li><a href="contact.html">contact</a></li>
+        </ul>
+    </nav>
 
     <main>
         <div class="card">
@@ -30,7 +38,14 @@
             <img src="https://images.pexels.com/photos/6494668/pexels-photo-6494668.jpeg" alt="img2">
             <p>text2</p>
         </div>
-                
+        <div class="card">
+            <img src="https://images.pexels.com/photos/12527034/pexels-photo-12527034.jpeg" alt="img3">
+            <p>text3</p>
+        </div>
+        <div class="card">
+            <img src="https://images.pexels.com/photos/11350811/pexels-photo-11350811.jpeg" alt="img4">
+            <p>text4</p>
+        </div>
     </main>
 
 </body>
