added sports web site

--- a/lap1/test_page/about.html
+++ b/lap1/test_page/about.html
@@ -30,6 +30,21 @@
         </ul>
     </nav>
 
+    <main>
+        <table>
+            <tr>
+                <th>Color</th>
+                <th>Name</th>
+                <th>Hex</th>
+                <th>RGB</th>
+            </tr>
+
+                <tr>
+                    <td></td>
+                </tr>
+        </table>
+    </main>
+
 </body>
 
 </html>
