--- a/lap1/test_page/contact.html
+++ b/lap1/test_page/contact.html
@@ -27,6 +27,9 @@
             <li><a href="about.html">about</a></li>
             <li><a href="contact.html">contact</a></li>
         </ul>
+
+        <p class="mywords"></p>
+        <h2 id="bigheader"></h2>
     </nav>
 
 </body>
