removed some proper junk, rest is still junk but can have some value

--- a/lap_0-html-css/day1-html-basics/about.html
+++ b/lap_0-html-css/day1-html-basics/about.html
@@ -26,23 +26,12 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="about.html">about</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="html-hex.html">html colors</a></li>
         </ul>
     </nav>
 
     <main>
-        <table>
-            <tr>
-                <th>Color</th>
-                <th>Name</th>
-                <th>Hex</th>
-                <th>RGB</th>
-            </tr>
-
-                <tr>
-                    <td></td>
-                </tr>
-        </table>
+        
     </main>
 
 </body>
