--- a/lap_0-html-css/day1-html-basics/html-hex.html
+++ b/lap_0-html-css/day1-html-basics/html-hex.html
@@ -8,6 +8,8 @@
     <title>Just a test - Contact</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./html-hex.js" defer></script>
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,19 +20,34 @@
 
     <header>
         <h1>YO!</h1>
-        <p>More nothingness...</p>
+        <p>Default HTML colours in alphabetical order and their HEX values</p>
     </header>
-    
+
     <nav>
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="about.html">about</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="html-hex.html">html colors</a></li>
         </ul>
 
         <p class="mywords"></p>
         <h2 id="bigheader"></h2>
     </nav>
+
+    <main>
+        <table>
+            <thead>
+                <tr>
+                    <th class="first">Name</th>
+                    <th class="second">Colour</th>
+                    <th class="third">Hex</th>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </main>
 
 </body>
 
