--- a/lap_1-js/day3-async-oop/wiki_exercise/index.html
+++ b/lap_1-js/day3-async-oop/wiki_exercise/index.html
@@ -16,6 +16,14 @@
         <input type="text" placeholder="Search term" id="searchTerm" name="searchTerm">
         <input type="submit" Value="GO!">
     </form>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <section id="found">
+
+    </section>
 
 </body>
 
