--- a/lap_0-html-css/day1-html-basics/index.html
+++ b/lap_0-html-css/day1-html-basics/index.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="about.html">about</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="html-hex.html">html colors</a></li>
         </ul>
     </nav>
 
