--- a/lap_0-html-css/day2-html-css-basics/group_task_sports_team/index.html
+++ b/lap_0-html-css/day2-html-css-basics/group_task_sports_team/index.html
@@ -200,9 +200,9 @@
       <img src="https://sm.imgix.net/21/32/chevil.JPG?w=640&h=480&auto=compress,format&fit=clip"
         alt="Chelsea with the UEFA Super Cup" class="second-section-element">
 
-      <p class="link" class="second-section-element">
-        <a href="https://www.chelseafc.com/en">Click me</a>
-      </p>
+      <div class="center">
+        <a href="https://www.chelseafc.com/en" target="_blank">Click me</a>
+      </div>
 
       <img
         src="https://st2.depositphotos.com/2124563/8893/i/450/depositphotos_88939092-stock-photo-flag-football-club-chelsea-england.jpg"
