--- a/lap_1-js/day2-dom/exercise2/index.html
+++ b/lap_1-js/day2-dom/exercise2/index.html
@@ -7,33 +7,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Maker</title>
 
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+    <link href="./style.css" rel="stylesheet" crossorigin="anonymous">
+
+
     <script src="index.js" defer></script>
 </head>
 
 <body>
-    <section>
-        <form action="" id="my-form">
-            <label for="greeting">Enter greeting:</label>
+    <div class="container">
+        <section>
+            <form action="" id="my-form">
+                <label for="greeting">Enter greeting:</label>
 
-            <input name="greeting" placeholder="Enter greeting" id="greeting">
+                <input name="greeting" placeholder="Enter greeting" id="greeting" class="form-control">
 
-            <label for="occasion">Select an occasion:</label>
+                <label for="occasion">Select an occasion:</label>
 
-            <select name="occasion" id="occasion">
-                <option value="birthday">Birthday</option>
-                <option value="christmas">Christmas</option>
-                <option value="easter">Easter</option>
-                <option value="newYear">New Year</option>
-            </select>
+                <select name="occasion" id="occasion" class="form-select-lg">
+                    <option value="birthday">Birthday</option>
+                    <option value="christmas">Christmas</option>
+                    <option value="easter">Easter</option>
+                    <option value="newYear">New Year</option>
+                </select>
 
-            <label for="message">Enter message:</label>
+                <label for="message">Enter message:</label>
 
-            <textarea name="message" placeholder="Type your message here" id="message" cols="30" rows="10"></textarea>
+                <textarea name="message" placeholder="Type your message here" id="message" cols="30" rows="10"
+                    class="form-control"></textarea>
 
-            <input type="submit" name="submitBtn" id="submitBtn">
-        </form>
-    </section>
+                <input type="submit" name="submitBtn" id="submitBtn">
+            </form>
+        </section>
+
+        <section id="second">
+            <h2> Card </h2>
+            <img class="card-img-top" src="./flower-color.jpg" alt="a card" style="width:100%">
+        </section>
+
+    </div>
 
 </body>
 
 </html>
+
