added descr to wiki rest app

--- a/lap_1-js/day3-async-oop/wiki_exercise/index.html
+++ b/lap_1-js/day3-async-oop/wiki_exercise/index.html
@@ -12,6 +12,10 @@
 
 <body>
     <h1>Wiki search</h1>
+    <br>
+
+    <h3>This is a basic experiment based on Wikipedia's API. It is supposed to obtain results for specific search term and return 1 result if the word "album" has been found in the title or snippet in the article. </h3>
+    <h3>It does not work as desired in most cases, but this is only an experiment after all</h3>
     <form action="" id="searchForm">
         <input type="text" placeholder="Search term" id="searchTerm" name="searchTerm">
         <input type="submit" Value="GO!">
